--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "tailwindcss": "^3.0.7"
   }
 }
